[gd_scene load_steps=4 format=3 uid="uid://2pmhnuhvk0tn"]

[ext_resource type="PackedScene" uid="uid://baf7uguc76hx5" path="res://Interface/Components/HealthBar/HealthBarOver.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://8a6q6i54ode7" path="res://Interface/Components/HealthBar/HealthBarUnder.tscn" id="2"]
[ext_resource type="Script" path="res://Interface/Components/HealthBar/HealthBar.gd" id="3"]

[node name="HealthBar" type="MarginContainer"]
custom_minimum_size = Vector2(50, 10)
offset_right = 50.0
offset_bottom = 6.0
script = ExtResource("3")

[node name="HealthBarUnder" parent="." instance=ExtResource("2")]
layout_mode = 2

[node name="HealthBarOver" parent="." instance=ExtResource("1")]
layout_mode = 2
